# ultimate_tic_tac_toe

./: .gitignore  0.bundle.worker.js  0.bundle.worker.js.map  Cargo.toml  README.md  bundle.js  bundle.js.map  game.bundle.worker.js  game.bundle.worker.js.map  index.html
base_game/: Cargo.toml
base_game/src/: ai.rs  fen.rs  game.rs  lib.rs  local_board.rs  monte_carlo.rs
base_game/test_data/: ai_simulation
game_ai/: Cargo.toml
game_ai/src/: lib.rs
src/: game.rs  game_ai.rs  lib.rs  main.rs  terminal_game.rs
terminal_game/: Cargo.toml
terminal_game/src/: main.rs
web_game/: webpack.config.js
web_game/components/: App.css  Button.js  Game.js  GlobalBoard.js  HorizontalSpacer.js  LoadingIcon.js  LocalBoard.js  Menu.js  Piece.js  Spacer.js  Tutorial.js
web_game/front-end/: index.html  index.js  package.json  webpack.config.js
web_game/front-end/components/: App.css  App.js  Button.js  Cell.js  Game.js  GameStatus.js  GlobalBoard.js  LocalBoard.js  Menu.js  Piece.js  Tutorial.js
web_game/front-end/hooks/: useGame.js
web_game/front-end/workers/: game.worker.js
web_game/wasm/: Cargo.toml
web_game/wasm/src/: lib.rs
web_game/workers/: game.worker.js
www/: index.js  package.json  webpack.config.js
www/components/: App.js  Cell.js  Game.js  GlobalBoard.js  LocalBoard.js  Piece.js
www/utils/: generateBorders.js
www/workers/: game.worker.js
