[package]
name = "terminal_game"
version = "0.1.0"
authors = ["Justus Tumacder <JustusFT@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.3"
rustyline = "5.0.0"
base_game = { path = "../base_game" }